--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="h-screen w-screen max-h-screen max-w-screen overflow-hidden">
+	<body data-sveltekit-preload-data="hover" class="dark h-screen w-screen max-h-screen max-w-screen overflow-hidden">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
